--- a/_posts/2019-07-11-the-us-narrative-today.html
+++ b/_posts/2019-07-11-the-us-narrative-today.html
@@ -1,106 +1,106 @@
 ---
 images:
-- name: beach-clouds-lifeguard-beachclouds-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-brush.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
-- name: locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
-- name: beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-pablo-blue.jpg
-- name: old-door-lock-old-door-lock-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-ww2-dresden.jpg
-- name: border-crossing-bordercrossing-spagetti-accident.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-spagetti-accident.png
-- name: dc-statue-dcstatue-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-yellow-paper.jpg
-- name: oldhotel-oldhotel-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-atari-asteroids.jpg
-- name: oldhousecars-house-old-cars-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-bright-sand.jpg
-- name: old-church-oldchurch-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-umberto-bocc.jpg
-- name: stories-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capitolbattle-blue-circuit.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-nazi-poster.jpg
-- name: carry-load-carryload-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dark-rain.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-emily-carr.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-emily-carr.JPG
-- name: trucksilo-trucksilo-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-mucha-mult.jpg
-- name: miamibeach-miamibeach-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colorful-blocks.jpg
-- name: ellis-island-ellis-island-room-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-matrix.jpg
-- name: school-clouds-church-clouds-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kand-two.jpg
-- name: downtheline-downtheline-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-marcel-duchamp.jpg
-- name: aws-s3-stories-fence-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
-- name: server-racks-clouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-spagetti-accident.jpg
-- name: dragon-desert-desert-dragon-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-really-hot.jpg
-- name: sand-hand-sand-hand-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crafty-painting.jpg
-- name: oldroad-old-road-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-smooth-ride.jpg
-- name: oldcabin-store-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-clean-view.jpg
-- name: old-granary-field-oldhouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-clean-view.jpg
-- name: oldhouse-granaryfield-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-atari-asteroids.jpg
-- name: locked-up-steam-lock-up-steam-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-missle.jpg
-- name: store-on-corner-oldcabin-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crabapple.jpg
-- name: old-house-oldhouse-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-hot-spicy.jpg
-- name: old-gas-pumps-oldgaspumps-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-dresden.jpg
-- name: berlinwall2-berlinwall-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-atari-asteroids.jpg
-- name: machine-road-machine-road-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-neo-instinct.jpg
-- name: walled-garden-walled-garden-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-internet-numbers.jpg
-- name: old-door-lock-old-door-lock-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-nazi-poster.jpg
-- name: liberty-back-statue-liberty-back-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-nazi-poster.jpg
-- name: crow-crow-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-nazi-poster.jpg
-- name: aws-s3-stories-new-path-in-the-woods-black-white.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-path-in-the-woods-black-white.jpg
-- name: window-window-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-clean-view.jpg
-- name: blossombar-deep-connections-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-50-62.jpg
-- name: downtown-trucksilo-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-three.jpg
-- name: downtown-trucksilo-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-cinnamon-rolls.jpg
-- name: stories-adam-smith-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-adam-smith-feed-people.jpg
-- name: razorcliff-razorcliff-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-circuit.jpg
-- name: cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-- name: razorcliff-razorcliff-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purple-pond.jpg
-- name: old-house-oldhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-really-hot.jpg
-- name: stories-4882162452-fa3126b38d-b-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dark-dali.jpg
-- name: curtain-curtain-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crafty-painting.jpg
+- name: machine-road-machine-road-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-sunday.jpg
+- name: flower-barbed-wire-flower-barbed-wire-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colorful-dream.jpg
+- name: aws-s3-lighthouse-lighthouse-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
+- name: locked-up-steam-lock-up-steam-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purp-paper.jpg
+- name: subway-subway-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purp-paper.jpg
+- name: paris-paris-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-smoking-cigarette.jpg
+- name: 35201856153_61bc075e4b-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-nazi-invasion.jpg
+- name: old-school-house-old-schoolhouse-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-attack-planes.jpg
+- name: subway-subway-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-electricity.jpg
+- name: sand-hand-sand-hand-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dali-two.jpg
+- name: containership-containership-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
+- name: oldhouse-granaryfield-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colorful-dream.jpg
+- name: razorcliff-razorcliff-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purp-paper.jpg
+- name: christianity-christianity-under-construction-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-brush.jpg
+- name: mistywoods-babyfoot-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-emily-carr.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
+- name: server-cloud-server-racks-clouds-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-monet-one.jpg
+- name: downtheline-downtheline-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-matrix.jpg
+- name: oldroad-old-road-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crunch-paper.jpg
+- name: oldcabin-store-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-umberto-bocc.jpg
+- name: old-door-lock-old-door-lock-2-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-feed-people.jpg
+- name: liberty-back-statue-liberty-back-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-spagetti-accident.jpg
+- name: gears-4882162452-fa3126b38d-b-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-diego-rivera1.jpg
+- name: legal-statue-legalstatue-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-hot-spicy.jpg
+- name: crow_really_hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_really_hot.jpg
+- name: beach-rocks-beach-rocks-currents-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-diego-rivera1.jpg
+- name: oldcabin-oldcabin-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-post-modern.jpg
+- name: powerlines-power-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-umberto-bocc.jpg
+- name: oldcabin-oldcabin-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-creativity.jpg
+- name: cargo-ship-cargo-ship-on-sea-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-purple-storm.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
+- name: san-francisco-city-bridge-sf-city-bridge-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crabapple.jpg
+- name: store-on-corner-oldcabin-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-oily-mcoilface.jpg
+- name: ellis-island-ellis-island-room-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crunch-paper.jpg
+- name: locked-up-steam-lock-up-steam-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-aqua.jpg
+- name: store-on-corner-oldcabin-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colorful-dream.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
+- name: server-cloud-server-racks-clouds-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-internet-numbers.jpg
+- name: white-house-lawn-white-house-lawn-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-aqua.jpg
+- name: 35201856153_61bc075e4b-wreck.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-wreck.jpg
+- name: catacombs-catacombs-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-satan-red.jpg
+- name: white-house-lawn-white-house-lawn-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-oily-mcoilface.jpg
+- name: bordercrossing-bordercrossing-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sand-paper.jpg
+- name: server-cloud-server-racks-clouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kandinsky-bv.jpg
+- name: mistywoods-babyfoot-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-hot-spicy.jpg
+- name: bluelake-colorful-blocks-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-00-38-67.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+- name: beach-clouds-lifeguard-beachclouds-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-umberto-bocc.jpg
+- name: curtain-curtain-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-matrix.jpg
+- name: ellis-island-ellisisland-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-purp-paper.jpg
 ---
 
